objects/Lead_Products__c.object
<CustomObject>
    <fields>
        <fullName>BU__c</fullName>
        <label>Business Unit</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_User_Type__c</fullName>
        <globalPicklist>External_User_Type</globalPicklist>
        <label>External User Type</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Lead Products</relationshipLabel>
        <relationshipName>Lead_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductId__c</fullName>
        <label>ProductId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Lead_Products__c</fullName>
        <description>SFDC - 4167 - Field type ‘Power of One’ for reporting purpose only</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>It shows if at least 1 record on this object was created or not (1 means that it was)</inlineHelpText>
        <label># of Lead Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Lead Product</label>
    <nameField>
        <displayFormat>LP{0000}</displayFormat>
        <label>Lead Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>